# bazel_rules_python_proto

./: README.md  WORKSPACE  bazel-bazel_rules_python_proto  bazel-bin  bazel-out  bazel-testlogs  message_test.py  renovate.json
foxglove/: BUILD  BUILD.bazel  foxglove.py  foxglove_test.py
rules_python_working/examples/py_proto_library/: BUILD.bazel  WORKSPACE
rules_python_working/examples/py_proto_library/foxglove/: message_test.py
