load("@rules_python//python:defs.bzl", "py_test", "py_library")


py_library(
    name = "message_py",
    deps = [
        "//example.com/another_proto:message_proto_py_pb2",
        "@foxglove_proto//:foxglove_py_proto",
    ],
    srcs = ["__init__.py", "message_test.py"],
)
py_test(
    name = "message_test",
    srcs = [":message_py"],
    deps = [
        "//example.com/another_proto:message_proto_py_pb2",
        "@foxglove_proto//:foxglove_py_proto",
    ],
    main = "message_test.py"
)
